Wait for macOS hello file after mount

--- a/.github/actions/macfuse-ci/action.yml
+++ b/.github/actions/macfuse-ci/action.yml
@@ -25,5 +25,5 @@ runs:
       shell: bash
       run: |
         cargo test --all --all-targets --features=libfuse -- --skip=mnt::test::mount_unmount
-        ./osx_mount_tests.sh
+        cargo run -p fuser-tests -- macos-mount
         ./tests/macos_pjdfs.sh
